finally it's working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
             {% if not current_user.is_authenticated %}
             <li><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
