--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Welcome to Virtual IIT Madras</h1>
-<p>This is the home page of your virtual IIT Madras app.</p>
+<p>This virtual campus is designed for students all over the globe pursuing online degree from IIT Madras.</p>
+<br>
+<p>This is your Campus, this is your home!</p>
+
 {% endblock %}
