--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
     <link href="{{ url_for('static', filename='output.css') }}" rel="stylesheet">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-iit bg-cover flex flex-col text-gray-400 container mx-auto px-6 py-4 items-center justify-center ">
     <h2>Login</h2>
 
     <!-- Your login form -->
