--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,19 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="text-4xl font-bold text-center mb-4">Edit Profile</h1>
-            <form action="{{ url_for('edit_profile') }}" method="POST" class="space-y-6">
-                <div>
-                    <label for="email" class="block text-lg font-semibold text-gray-700">Email:</label>
-                    <input type="email" id="email" name="email" value="{{ current_user.email }}" required class="mt-1 px-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                </div>
-                <div>
-                    <label for="password" class="block text-lg font-semibold text-gray-700">Password (leave blank if you don't want to change):</label>
-                    <input type="password" id="password" name="password" class="mt-1 px-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="bg-blue-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">Update Profile</button>
-                </div>
-            </form>
-            
+<div class="max-w-md mx-auto mt-6 p-6 bg-white rounded-lg shadow-md">
+    <h1 class="text-4xl font-bold text-center mb-4">Edit Profile</h1>
+    <form action="{{ url_for('edit_profile') }}" method="POST" class="space-y-6">
+        <div>
+            <label for="name" class="block text-lg font-semibold text-gray-700">Name:</label>
+            <input type="text" id="name" name="name" value="{{ current_user.name }}" required class="mt-1 px-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div>
+            <label for="email" class="block text-lg font-semibold text-gray-700">Email:</label>
+            <input type="email" id="email" name="email" required class="mt-1 px-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div>
+            <label for="password" class="block text-lg font-semibold text-gray-700">Password (leave blank if you don't want to change):</label>
+            <input type="password" id="password" name="password" class="mt-1 px-4 py-2 w-full border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="text-center">
+            <button type="submit" class="bg-blue-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">Update Profile</button>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
