--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1 class="text-4xl font-bold text-center mb-4">User Profile</h1>
-    <img src="https://ui-avatars.com/api/?name={{ current_user.email }}&background=random&bold=true&rounded=true&size=128"
-        alt="" srcset="">
-    <p class="text-lg font-semibold mb-2">Name: {{ current_user.name }}</p>
-    <p class="text-lg font-semibold mb-2">Email: {{ current_user.email }}</p>
-<div class="mt-4 text-right">
-    <a href="{{ url_for('edit_profile') }}"
-        class="bg-blue-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">Edit
-        Profile</a>
+<div class="max-w-md mx-auto mt-6 p-6 bg-white rounded-lg shadow-md">
+    <h1 class="text-4xl font-bold text-center mb-4">User Profile</h1>
+    <div class="flex items-center justify-center mb-4">
+        <img src="https://ui-avatars.com/api/?name={{ current_user.name }}&background=random&bold=true&rounded=true&size=128"
+            alt="Profile Image" class="rounded-full w-32 h-32">
+    </div>
+    <div class="mb-4 text-center">
+        <p class="text-lg font-semibold">{{ current_user.name }}</p>
+        <p class="text-lg text-gray-600">{{ current_user.email }}</p>
+    </div>
+    <div class="mt-6 flex justify-center">
+        <a href="{{ url_for('edit_profile') }}"
+            class="bg-blue-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            Edit Profile
+        </a>
+    </div>
 </div>
-
 {% endblock %}
